force-app/main/default/objects/Tower__c/fields/Booking_Cancellation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Cancellation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tower1</relationshipName>
    <type>Lookup</type>
</CustomField>