force-app/main/default/objects/Tower__c/fields/CEO_Threshold_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>CEO_Threshold_Base_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CEO Threshold Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>