force-app/main/default/objects/Tower__c/fields/Finance_Manager__c.field-meta.xml
<CustomField>
    <fullName>Finance_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tower7</relationshipName>
    <type>Lookup</type>
</CustomField>