force-app/main/default/objects/Tower__c/fields/Is_Oc_Certificate_Upload__c.field-meta.xml
<CustomField>
    <fullName>Is_Oc_Certificate_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Oc Certificate Upload</label>
    <type>Checkbox</type>
</CustomField>