force-app/main/default/objects/Tower__c/fields/No_of_Saleable_Units__c.field-meta.xml
<CustomField>
    <fullName>No_of_Saleable_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Saleable Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>