force-app/main/default/objects/Tower__c/fields/OC_Certificate_Date__c.field-meta.xml
<CustomField>
    <fullName>OC_Certificate_Date__c</fullName>
    <label>OC Certificate Date</label>
    <type>Date</type>
</CustomField>