force-app/main/default/objects/Tower__c/fields/Quotation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tower2</relationshipName>
    <type>Lookup</type>
</CustomField>