force-app/main/default/objects/Tower__c/fields/Quotation_Survey_No_Details__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Survey_No_Details__c</fullName>
    <label>Quotation Survey No. Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>