force-app/main/default/objects/Tower__c/fields/RERA_No__c.field-meta.xml
<CustomField>
    <fullName>RERA_No__c</fullName>
    <label>RERA No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>