force-app/main/default/objects/Tower__c/fields/RM_User__c.field-meta.xml
<CustomField>
    <fullName>RM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tower4</relationshipName>
    <type>Lookup</type>
</CustomField>