force-app/main/default/objects/Tower__c/fields/Sales_UOM__c.field-meta.xml
<CustomField>
    <fullName>Sales_UOM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales UOM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>