force-app/main/default/objects/Tower__c/fields/Send_Demand_Mail__c.field-meta.xml
<CustomField>
    <fullName>Send_Demand_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Demand Mail</label>
    <type>Checkbox</type>
</CustomField>