force-app/main/default/objects/Tower__c/fields/Survey_No__c.field-meta.xml
<CustomField>
    <fullName>Survey_No__c</fullName>
    <label>Survey No.</label>
    <type>TextArea</type>
</CustomField>