force-app/main/default/objects/Tower__c/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions__c</fullName>
    <label>Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>