force-app/main/default/objects/Tower__c/fields/Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition__c</fullName>
    <inlineHelpText>This will be use to print on Cost sheet pdf and Booking pdf as a terms &amp; Condition.</inlineHelpText>
    <label>Terms &amp; Condition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>