force-app/main/default/objects/Tower__c/fields/Tower_Code__c.field-meta.xml
<CustomField>
    <fullName>Tower_Code__c</fullName>
    <label>Tower Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>