force-app/main/default/objects/Tower__c/fields/Tower_Image__c.field-meta.xml
<CustomField>
    <fullName>Tower_Image__c</fullName>
    <label>Tower Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>